# Systems_Programming_2022

./: .gitignore  README.md
Exams/: Barriera_Ciclica.cpp  CMakeLists.txt  Challenge.cpp  Challenge_solution.cpp  CountDownLatch.cpp  Executor.cpp  Executor2.cpp  Joiner.cpp  Processor.cpp  Synchronizer.cpp
Exams/ProcessorT/: 2021-10-ProcessorT-main.cpp  2021-10-ProcessorT_my_solution.cpp
Labs/Lab1/: CMakeLists.txt
Labs/Lab1/my_lab1/: DurationLogger.cpp  DurationLogger.h  MessageStore.cpp  MessageStore.h  main.cpp  message.cpp  message.h
Labs/Lab2/es1_int_list/: CMakeLists.txt  main.cpp  myList.cpp  myList.h
Labs/Lab2/es1_message_list/: CMakeLists.txt  main.cpp  myList.cpp  myList.h
Labs/Lab2/es2_custom_vector/: CMakeLists.txt  MyVector.cpp  MyVector.h  main.cpp
Labs/Lab2/es3_file_system/: Base.cpp  Base.h  CMakeLists.txt  Directory.cpp  Directory.h  File.cpp  File.h  main.cpp
Labs/Lab3/es1_my_vector_template/: CMakeLists.txt  MyVector.hpp  main.cpp
Labs/Lab3/es2_matrix/: CMakeLists.txt  Matrix.hpp  main.cpp
Labs/Lab3/es3_tree_template/: CMakeLists.txt  TreeNode.hpp  main.cpp
Labs/Lab4/Es1/: CMakeLists.txt  MapperInput.hpp  ReducerInput.hpp  Result.hpp  log.txt  main.cpp
Labs/Lab4/Es2/: CMakeLists.txt  MapperInput.hpp  ReducerInput.hpp  Result.hpp  Serializable.hpp  log.txt  main.cpp
Labs/Lab5/Es1/: CMakeLists.txt  Jobs.hpp  main.cpp
Labs/Lab5/Es1/Files/: a.txt (another copy)  a.txt (copy)  b b.txt  (+6 more)
Labs/Lab5/async-prodcons /: CMakeLists.txt  main.cpp
Lectures/basic_classes_1_lez_2021-03-11_18/: CMakeLists.txt
Lectures/basic_classes_1_lez_2021-03-11_18/classeDynamic/: dynamicMemClass.cpp  dynamicMemClass.h  main.cpp
Lectures/basic_classes_1_lez_2021-03-11_18/create_class/: classeprova.h  main.cpp
Lectures/basic_classes_2_lez_2021-03-25/classeDynamic/: dynamicMemClass.cpp  dynamicMemClass.h  main.cpp
Lectures/basic_classes_2_lez_2021-03-25/create_class/: classeprova.cpp  classeprova.h  main.cpp
Lectures/conversione_tipi_costruttore_annidato_lez_2021-04-08/: CMakeLists.txt
Lectures/conversione_tipi_costruttore_annidato_lez_2021-04-08/conversione_tipi_base/: main.cpp
Lectures/conversione_tipi_costruttore_annidato_lez_2021-04-08/esempio_costruttore_annidato/: main.cpp
Lectures/iteratori_lez_2021-05-27/: CMakeLists.txt  main.cpp
Lectures/overloading_operatori_lez_2021-04-26_pt2/: CMakeLists.txt  main.cpp
Lectures/programmazione_generica_smart_pointers_lez_2021-04-26_pt1/: CMakeLists.txt
Lectures/thread_1_lez_2021-05-31/: CMakeLists.txt  main.cpp
Lectures/thread_2_lez_2021-06-11/: CMakeLists.txt  main.cpp
Personal_Study/02 - il modello di esecuzione/: makefile  plain.c
Personal_Study/Basic_Youtube_Tutorial/: CMakeLists.txt  Circle.cpp  Circle.h  Shape.cpp  Shape.h  main.cpp
Personal_Study/CMakeLists_example/: CMakeLists.txt
Personal_Study/Prove/: CMakeLists.txt  efsfsdff.cpp  exceptions.cpp  main.cpp
Personal_Study/Timing_Benchmark/: CMakeLists.txt  main.cpp
Personal_Study/Timing_Visual_Profiler/: CMakeLists.txt  instrumentor.cpp  instrumentor.h  main.cpp
(+5 files in other folders)
